--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
-.dart_tool/
-
+.atom/
+.idea
 .packages
+.dart_tool/
 .pub/
-pubspec.lock
-
 build/
+ios/.generated/
+packages
+pubspec.lock
