--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,6 +4,7 @@ description: Demonstrates how to use the phone_log plugin.
 dependencies:
   flutter:
     sdk: flutter
+  fixnum: ^0.10.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
