--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.phonelog">
+  package="com.jiajiabingcheng.phonelog">
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
 </manifest>
