--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,6 @@ flutter:
     pluginClass: PhoneLogPlugin
 
 dev_dependencies:
-  mockito: ^2.0.2
+#  mockito: ^2.0.2
   flutter_test:
     sdk: flutter
